--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,7 @@ html.dark-theme body {
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 button {
   font-family: inherit;
@@ -67,3 +68,126 @@ html.dark-theme button:focus {
  top: 3px;
  right: 6px;
 }
+
+.chrome-tabs-bottom-bar.progress {
+  bottom: -3px;
+  width: 0%;
+  height: 3px;
+  z-index: 9;
+  display:  none;
+
+  background: #b91f1f;
+        -moz-border-radius: 1px;
+        -webkit-border-radius: 1px;
+        border-radius: 1px;
+        -moz-transition: width 500ms ease-out,opacity 400ms linear;
+        -ms-transition: width 500ms ease-out,opacity 400ms linear;
+        -o-transition: width 500ms ease-out,opacity 400ms linear;
+        -webkit-transition: width 500ms ease-out,opacity 400ms linear;
+        transition: width 500ms ease-out,opacity 400ms linear
+}
+
+.chrome-tabs-bottom-bar.progress dd,.chrome-tabs-bottom-bar.progress dt {
+        position: absolute;
+        top: 0;
+        height: 2px;
+        -moz-box-shadow: #b91f1f 1px 0 6px 1px;
+        -ms-box-shadow: #b91f1f 1px 0 6px 1px;
+        -webkit-box-shadow: #b91f1f 1px 0 6px 1px;
+        box-shadow: #b91f1f 1px 0 6px 1px;
+        -moz-border-radius: 100%;
+        -webkit-border-radius: 100%;
+        border-radius: 100%
+    }
+    .chrome-tabs-bottom-bar.progress dd {
+        opacity: 1;
+        width: 20px;
+        right: 0;
+        clip: rect(-6px,22px,14px,10px)
+    }
+    .chrome-tabs-bottom-bar.progress dt {
+        opacity: 1;
+        width: 180px;
+        right: -80px;
+        clip: rect(-6px,90px,14px,-6px)
+    }
+
+    @-moz-keyframes pulse {
+        30% {
+            opacity: 1
+        }
+        60% {
+            opacity: 0
+        }
+        100% {
+            opacity: 1
+        }
+    }
+    @-ms-keyframes pulse {
+        30% {
+            opacity: .6
+        }
+        60% {
+            opacity: 0
+        }
+        100% {
+            opacity: .6
+        }
+    }
+    @-o-keyframes pulse {
+        30% {
+            opacity: 1
+        }
+        60% {
+            opacity: 0
+        }
+        100% {
+            opacity: 1
+        }
+    }
+    @-webkit-keyframes pulse {
+        30% {
+            opacity: .6
+        }
+        60% {
+            opacity: 0
+        }
+        100% {
+            opacity: .6
+        }
+    }
+    @keyframes pulse {
+        30% {
+            opacity: 1
+        }
+        60% {
+            opacity: 0
+        }
+        100% {
+            opacity: 1
+        }
+    }
+    .chrome-tabs-bottom-bar.progress.waiting dd,.chrome-tabs-bottom-bar.progress.waiting dt {
+        -moz-animation: pulse 2s ease-out 0s infinite;
+        -ms-animation: pulse 2s ease-out 0s infinite;
+        -o-animation: pulse 2s ease-out 0s infinite;
+        -webkit-animation: pulse 2s ease-out 0s infinite;
+        animation: pulse 2s ease-out 0s infinite
+    }
+
+    .comic {
+        width: 15%;
+        border: #dee1e6 solid 2px;
+        border-radius: 5px;
+        overflow: hidden;
+        margin: 1%;
+    }
+
+    .comic img {
+        width: 100%;
+    }
+
+    .comic .title {
+        text-align: center;
+        width: 100%;
+    }
