--- a/src/css/index.css
+++ b/src/css/index.css
@@ -191,3 +191,18 @@ html.dark-theme button:focus {
         text-align: center;
         width: 100%;
     }
+
+
+    .mock-browser-content {
+        height: calc(100% - 46px);
+    }
+
+    webview {
+        height: 100%;
+    }
+
+    body, html {
+      height: 100%;
+    }
+
+    webview.hidden { width: 0px; height: 0px; flex: 0 1; }
